--- a/view/index.html
+++ b/view/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>音乐推荐系统-主页</title>
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="http://127.0.0.1:5000/css/element-ui.css">
     <style>
         html,
         body {
@@ -102,9 +102,9 @@
         </div>
 
     </div>
-    <script src="https://unpkg.com/vue@2/dist/vue.js"></script>
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-    <script src="my_func.js"></script>
+    <script src="http://127.0.0.1:5000/css/vue.js"></script>
+    <script src="http://127.0.0.1:5000/css/index.js"></script>
+    <script src="http://127.0.0.1:5000/css/my_func.js"></script>
     <script>
         new Vue({
             el: '#app',
