--- a/view/login.html
+++ b/view/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>音乐推荐系统-登录或注册</title>
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="http://127.0.0.1:5000/css/element-ui.css">
     <style>
         body {
             background-image: url('static/cat.jpg');
@@ -58,9 +58,9 @@
             </el-form-item>
         </el-form>
     </div>
-    <script src="https://unpkg.com/vue@2/dist/vue.js"></script>
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-    <script src="my_func.js"></script>
+    <script src="http://127.0.0.1:5000/css/vue.js"></script>
+    <script src="http://127.0.0.1:5000/css/index.js"></script>
+    <script src="http://127.0.0.1:5000/css/my_func.js"></script>
     <script>
         new Vue({
             el: '#app',
