--- a/view/login.html
+++ b/view/login.html
@@ -18,7 +18,7 @@
             height: 100vh;
             margin: 0;
         }
-        
+
         .login-container {
             width: 500px;
             padding: 80px;
@@ -28,7 +28,7 @@
             /* opacity: 0.5; */
             backdrop-filter: blur(8px);
         }
-        
+
         .login-title {
             text-align: center;
             margin-bottom: 30px;
@@ -52,8 +52,8 @@
                 <el-input type="password" v-model="loginForm.password" clearable></el-input>
             </el-form-item>
             <el-form-item>
-                <el-button type="primary" @click="submitForm()">登录</el-button>
-                <el-button @click="submitForm()">注册</el-button>
+                <el-button type="primary" @click="submitLoginForm()">登录</el-button>
+                <el-button @click="submitRegisterForm()">注册</el-button>
                 <el-button @click="back_homepage()">返回主页</el-button>
             </el-form-item>
         </el-form>
@@ -61,6 +61,9 @@
     <script src="http://127.0.0.1:5000/css/vue.js"></script>
     <script src="http://127.0.0.1:5000/css/index.js"></script>
     <script src="http://127.0.0.1:5000/css/my_func.js"></script>
+
+
+
     <script>
         new Vue({
             el: '#app',
@@ -90,20 +93,87 @@
                 };
             },
             methods: {
-                submitForm() {
+                
+                submitLoginForm() {
+                    // if (this.loginForm.username === '' || this.loginForm.password === '') {
+                    //     error_dialog.call(this, '用户名或密码不能为空');
+                    // } else {
+                    //     correct_dialog.call(this, '操作成功');
+                    //     localStorage.setItem('username', this.loginForm.username);
+                    //     window.location.href = 'recommend.html';
+                    // }
                     if (this.loginForm.username === '' || this.loginForm.password === '') {
                         error_dialog.call(this, '用户名或密码不能为空');
                     } else {
-                        correct_dialog.call(this, '操作成功');
-                        localStorage.setItem('username', this.loginForm.username);
-                        window.location.href = 'recommond.html';
+                        fetch('http://127.0.0.1:5000/apis/v1/login', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify({
+                                username: this.loginForm.username,
+                                password: this.loginForm.password
+                            })
+                        })
+                            .then(response => response.json())
+                            .then(data => {
+                                if (data.status === 'success') {
+                                    correct_dialog.call(this, '操作成功');
+                                    localStorage.setItem('username', this.loginForm.username);
+                                    window.location.href = 'recommend.html';
+                                } else {
+                                    error_dialog.call(this, '登录失败: ' + data.message);
+                                }
+                            })
+                    }
+                },
+                submitRegisterForm() {
+                    if (this.loginForm.username === '' || this.loginForm.password === '') {
+                        error_dialog.call(this, '用户名或密码不能为空');
+                    } else {
+                        fetch('http://127.0.0.1:5000/apis/v1/register', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify({
+                                username: this.loginForm.username,
+                                email: this.loginForm.email,
+                                password: this.loginForm.password
+                            })
+                        })
+                            .then(response => response.json())
+                            .then(data => {
+                                if (data.status === 'success') {
+                                    correct_dialog.call(this, '操作成功');
+                                    localStorage.setItem('username', this.loginForm.username);
+                                    window.location.href = 'recommend.html';
+                                } else {
+                                    error_dialog.call(this, '注册失败: ' + data.message);
+                                }
+                            })
+                            .catch(error => {
+                                error_dialog.call(this, '注册失败: ' + error.message);
+                            });
                     }
                 },
 
                 back_homepage() {
                     window.location.href = 'index.html';
+                },
+                displayErrorDialog(msg) {
+                    error_dialog.call(this, msg);
                 }
             }
+            // onload() {
+            //     console.log('onload')
+            //     // Check URL parameters for login_required
+            //     const urlParams = new URLSearchParams(window.location.search);
+            //     console.log(urlParams.get('msg'))
+            //     if (urlParams.has('msg') && urlParams.get('msg') === 'login_required') {
+            //         this.displayErrorDialog('请先登录');
+            //     }
+            // }
         });
     </script>
 </body>
